--- a/053산학과제.ipynb
+++ b/053산학과제.ipynb
@@ -133,8 +133,7 @@
       "source": [
         "## 데이터 시각화\n",
         "import matplotlib.pyplot as plt\n",
-        "import matplotlib.patches as patches\n",
-        "import numpy as np"
+        "import matplotlib.patches as patches\n"
       ],
       "metadata": {
         "id": "FCObSBGCV6r6"
